build: updated hero section

--- a/index.html
+++ b/index.html
@@ -44,7 +44,20 @@
       </button>
     </nav>
     <!-- Hero Section -->
-
+    <section class="hero" id="about">
+      <img
+        src="assets/images/wfh_1.svg"
+        alt="jane-doe"
+        loading="lazy"
+        class="hero-img"
+      />
+      <div class="bio animate__animated animate__shakeX">
+        <h2 class="bio-title">Hi there!</h2>
+        <p class="bio-text">
+          I am Lalitha Vadavalli as aspiring developer.Firstly I have started from content writing and out of curiosity started learning development.So now i wanted to pursue my career in this field.
+        </p>
+      </div>
+</section>
     <!-- More about -->
 
     <!-- Skills section -->
