build: added more section

--- a/index.html
+++ b/index.html
@@ -57,9 +57,25 @@
           I am Lalitha Vadavalli as aspiring developer.Firstly I have started from content writing and out of curiosity started learning development.So now i wanted to pursue my career in this field.
         </p>
       </div>
-</section>
+    </section>
     <!-- More about -->
-
+    <section class="more-about">
+      <h2>More About Me</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis
+        nesciunt excepturi quos obcaecati incidunt voluptatem ipsam sunt ipsum,
+        autem deleniti cupiditate molestias quis unde quae totam porro dicta
+        iure animi inventore, veniam hic! Omnis nulla, delectus a voluptatibus
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur
+        nostrum dolor minus, libero delectus praesentium perferendis
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero,
+        consequuntur labore? Ea totam voluptas amet!
+      </p>
+    </section>
     <!-- Skills section -->
 
     <!-- Projects section -->
