build: created projects

--- a/index.html
+++ b/index.html
@@ -141,7 +141,9 @@
             ratione vel inventore labore commodi modi quos culpa aut saepe!
             Alias!
           </p>
-          <a href="#" target="_blank" class="project-link">Check it Out</a>
+          <a href="#" target="_blank" class="project-link">Live Demo</a>
+          <br/>
+          <a href="#" target="_blank" class="project-link">Source Code</a>
         </div>
         <div class="project-container project-card">
           <img
@@ -156,7 +158,9 @@
             ratione vel inventore labore commodi modi quos culpa aut saepe!
             Alias!
           </p>
-          <a href="#" target="_blank" class="project-link">Check it Out</a>
+          <a href="#" target="_blank" class="project-link">Live Demo</a>
+          <br/>
+          <a href="#" target="_blank" class="project-link">Source Code</a>
         </div>
         <div class="project-container project-card">
           <img
@@ -171,7 +175,9 @@
             ratione vel inventore labore commodi modi quos culpa aut saepe!
             Alias!
           </p>
-          <a href="#" target="_blank" class="project-link">Check it Out</a>
+          <a href="#" target="_blank" class="project-link">Live Demo</a>
+          <br/>
+          <a href="#" target="_blank" class="project-link">Source Code</a>
         </div>
       </div>
     </section>
