build: added footer

--- a/index.html
+++ b/index.html
@@ -257,8 +257,17 @@
       <a href="#" target="_blank"
         ><img src="assets/icons/icons8-github.gif" alt="Github" class="socicon"
       /></a>
+      </div>
     <!-- Footer section -->
-
+    <footer>
+      <p class="copy">&copy; Copyright 2022</p>
+      <p class="copy">
+        Designed and developed by
+        <a href="https://twitter.com/koladechris" target="_blank"
+          >Lalitha Vadavalli</a
+        >
+      </p>
+   </footer>
     <!-- Website scripts -->
     <script src="assets/js/app.js"></script>
 
