--- a/index.html
+++ b/index.html
@@ -268,6 +268,13 @@
         >
       </p>
    </footer>
+   <!-- scrolls -->
+   <i class="scroll-up" id="scroll-up"
+      ><img
+        src="assets/icons/icons8-upward-arrow.gif"
+        class="socicon up-arrow"
+        alt="scroll-up"
+    /></i>
     <!-- Website scripts -->
     <script src="assets/js/app.js"></script>
 
