--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
         <li><a href="#about" class="nav-link">About</a></li>
         <li><a href="#skills" class="nav-link">Skills</a></li>
         <li><a href="#projects" class="nav-link">Projects</a></li>
-        <li><a href="#contact" class="nav-link">Contact</a></li>
       </ul>
       <button class="burger-menu" id="burger-menu">
         <ion-icon class="bars" name="menu-outline"></ion-icon>
@@ -47,7 +46,7 @@
     <section class="hero" id="about">
       <img
         src="assets/images/wfh_1.svg"
-        alt="jane-doe"
+        alt="lalitha"
         loading="lazy"
         class="hero-img"
       />
@@ -78,8 +77,7 @@
     </section>
     <!-- Skills section -->
     <section class="skills" id="skills">
-      <h2 class="skill-header">My Top Skills</h2>
-
+      <h2 class="skill-header">My  Skills</h2>
       <div class="skills-wrapper">
         <div class="first-set animate__animated animate__pulse">
           <img
@@ -87,6 +85,12 @@
             alt=""
             loading="lazy"
             class="icon icon-card"
+          />
+          <img 
+          src="assets/icons/icons8-redux.svg"
+          alt=""
+          loading="lazy"
+          class="icon icon-card"
           />
           <img
             src="assets/icons/icons8-css3.svg"
@@ -121,68 +125,83 @@
             loading="lazy"
             class="icon icon-card"
           />
+          <img
+            src="assets/icons/icons8-nodejs.svg"
+            alt=""
+            loading="lazy"
+            class="icon icon-card"
+          />
+        </div>
+
+        <div class="first-set animate__animated animate__pulse">
+          <img
+            src="assets/icons/icons8-mongodb.svg"
+            alt=""
+            loading="lazy"
+            class="icon icon-card"
+          />
+          <img 
+          src="assets/icons/icons8-chakra-ui.svg"
+          alt=""
+          loading="lazy"
+          class="icon icon-card"
+          />
+          <img
+            src="assets/icons/icons8-json-web-token.svg"
+            alt=""
+            loading="lazy"
+            class="icon icon-card"
+          />
+          <img
+            src="assets/icons/icons8-github.svg"
+            alt=""
+            loading="lazy"
+            class="icon icon-card"
+          />
         </div>
       </div>
     </section>
     <!-- Projects section -->
     <section class="projects" id="projects">
-      <h2 class="projects-title">Some of my Recent Projects</h2>
+      <h2 class="projects-title">My Work</h2>
+      <p class="projects-para">I would like to showcase my work.Here are some of my projects and blogs.</p>
       <div class="projects-container">
         <div class="project-container project-card">
-          <img
+          <!-- <img
             src="assets/images/expenseTracker.png"
             alt="expense-tracker"
             loading="lazy"
             class="project-pic"
-          />
-          <h3 class="project-title">Expense Tracker</h3>
+          /> -->
+          <h3 class="project-title">Projects</h3>
           <p class="project-details">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas
-            ratione vel inventore labore commodi modi quos culpa aut saepe!
-            Alias!
+            Best way to learn programming is by building projects.
+            Look at the projects that I have made so far. I have included both the Live demo and source code link. 
+            Have look into it and review's are welcome.
           </p>
-          <a href="#" target="_blank" class="project-link">Live Demo</a>
-          <br/>
-          <a href="#" target="_blank" class="project-link">Source Code</a>
+          <a href="#" class="project-link">View projects</a>
         </div>
+
         <div class="project-container project-card">
-          <img
-            src="assets/images/netflixClone.png"
-            alt="netflic-clone"
-            loading="lazy"
-            class="project-pic"
-          />
-          <h3 class="project-title">Netflix Clone</h3>
-          <p class="project-details">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas
-            ratione vel inventore labore commodi modi quos culpa aut saepe!
-            Alias!
-          </p>
-          <a href="#" target="_blank" class="project-link">Live Demo</a>
-          <br/>
-          <a href="#" target="_blank" class="project-link">Source Code</a>
-        </div>
-        <div class="project-container project-card">
-          <img
+          <!-- <img
             src="assets/images/greenyEarth.png"
             alt="greeny-earth"
             loading="lazy"
             class="project-pic"
-          />
-          <h3 class="project-title">Greeny Earth</h3>
+          /> -->
+          <h3 class="project-title">Blogs</h3>
           <p class="project-details">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas
-            ratione vel inventore labore commodi modi quos culpa aut saepe!
-            Alias!
+            Best way to learn programming is by writing 
+            I share learnings through my blogs which is helping to improve my understanding on the topic.
+            Have a look into it and review's are welcome.
           </p>
-          <a href="#" target="_blank" class="project-link">Live Demo</a>
-          <br/>
-          <a href="#" target="_blank" class="project-link">Source Code</a>
+          <a href="#" target="_blank" class="project-link">Read blogs</a>
         </div>
+
       </div>
     </section>
     <!-- Contact section -->
-    <section class="contact" id="contact">
+    <!-- <section class="contact" id="contact">
       <h2>Get In Touch With Me</h2>
       <div class="contact-form-container">
         <div class="contact-form">
@@ -230,44 +249,38 @@
           </form>
         </div>
       </div>
-    </section>
-    <!-- Social accounts - Fixed to the right -->
-    <div class="socials">
-      <a href="#" target="_blank"
-        ><img
-          src="assets/icons/icons8-twitter-circled.gif"
-          alt="Twitter"
-          loading="lazy"
-          class="socicon"
-      /></a>
-      <a href="#" target="_blank"
-        ><img
-          src="assets/icons/icons8-instagram.gif"
-          alt="Instagram"
-          loading="lazy"
-          class="socicon"
-      /></a>
-      <a href="#" target="_blank"
-        ><img
-          src="assets/icons/icons8-linkedin-circled.gif"
-          alt="Linkedin"
-          loading="lazy"
-          class="socicon"
-      /></a>
-      <a href="#" target="_blank"
-        ><img src="assets/icons/icons8-github.gif" alt="Github" class="socicon"
-      /></a>
-      </div>
+    </section> -->
+
     <!-- Footer section -->
     <footer>
       <p class="copy">&copy; Copyright 2022</p>
       <p class="copy">
         Designed and developed by
-        <a href="https://twitter.com/koladechris" target="_blank"
+        <a href="https://twitter.com/"
           >Lalitha Vadavalli</a
         >
       </p>
    </footer>
+       <!-- Social accounts  -->
+       <div class="socials">
+        <a href="#"
+          ><img
+            src="assets/icons/icons8-twitter.svg"
+            alt="Twitter"
+            loading="lazy"
+            class="socicon"
+        /></a>
+        <a href="#"
+          ><img
+            src="assets/icons/icons8-linkedin-circled.svg"
+            alt="Linkedin"
+            loading="lazy"
+            class="socicon"
+        /></a>
+        <a href="#"
+          ><img src="assets/icons/icons8-github.svg" alt="Github" class="socicon"
+        /></a>
+        </div>
    <!-- scrolls -->
    <i class="scroll-up" id="scroll-up"
       ><img
