build: created projects

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
     <nav>
       <h1>Lalitha</h1>
       <ul class="navigation">
-        <li><a href="#about" class="nav-link">About</a></li>
-        <li><a href="#skills" class="nav-link">Skills</a></li>
-        <li><a href="#projects" class="nav-link">Projects</a></li>
+        <li><a href="#about" class="active">Home</a></li>
+        <li><a href="projects.html" >Projects</a></li>
+        <li><a href="blogs.html">Blogs</a></li>
       </ul>
       <button class="burger-menu" id="burger-menu">
         <ion-icon class="bars" name="menu-outline"></ion-icon>
@@ -164,7 +164,7 @@
     <!-- Projects section -->
     <section class="projects" id="projects">
       <h2 class="projects-title">My Work</h2>
-      <p class="projects-para">I would like to showcase my work.Here are some of my projects and blogs.</p>
+      <p class="projects-para">Here are  my projects and blogs.</p>
       <div class="projects-container">
         <div class="project-container project-card">
           <!-- <img
@@ -179,7 +179,7 @@
             Look at the projects that I have made so far. I have included both the Live demo and source code link. 
             Have look into it and review's are welcome.
           </p>
-          <a href="#" class="project-link">View projects</a>
+          <a href="projects.html" class="project-link">View projects</a>
         </div>
 
         <div class="project-container project-card">
@@ -195,62 +195,10 @@
             I share learnings through my blogs which is helping to improve my understanding on the topic.
             Have a look into it and review's are welcome.
           </p>
-          <a href="#" target="_blank" class="project-link">Read blogs</a>
+          <a href="blogs.html"  class="project-link">Read blogs</a>
         </div>
-
       </div>
     </section>
-    <!-- Contact section -->
-    <!-- <section class="contact" id="contact">
-      <h2>Get In Touch With Me</h2>
-      <div class="contact-form-container">
-        <div class="contact-form">
-          <form action="https://formspree.io/f/xyylngw" method="POST">
-            <div class="form-control">
-              <label for="name">Name</label>
-              <input
-                type="text"
-                id="name"
-                name="sender-name"
-                placeholder="Enter Your Name"
-                class="input-field"
-                required
-              />
-            </div>
-            <div class="form-control">
-              <label for="email">Email</label>
-              <input
-                type="email"
-                id="email"
-                name="sender-email"
-                placeholder="Enter Your Email"
-                class="input-field"
-                required
-              />
-            </div>
-            <div class="form-control">
-              <label for="message">Message</label>
-              <textarea
-                id="message"
-                cols="60"
-                rows="10"
-                placeholder="Enter Your Message"
-                name="message"
-                class="input-field"
-                required
-              ></textarea>
-            </div>
-            <input
-              type="submit"
-              value="Submit"
-              id="submit-btn"
-              class="submit-btn"
-            />
-          </form>
-        </div>
-      </div>
-    </section> -->
-
     <!-- Footer section -->
     <footer>
       <p class="copy">&copy; Copyright 2022</p>
@@ -260,7 +208,7 @@
           >Lalitha Vadavalli</a
         >
       </p>
-   </footer>
+    </footer>
        <!-- Social accounts  -->
        <div class="socials">
         <a href="#"
@@ -270,14 +218,14 @@
             loading="lazy"
             class="socicon"
         /></a>
-        <a href="#"
+        <a href="https://www.linkedin.com/in/lalithavadavalli/"
           ><img
             src="assets/icons/icons8-linkedin-circled.svg"
             alt="Linkedin"
             loading="lazy"
             class="socicon"
         /></a>
-        <a href="#"
+        <a href="https://github.com/LalithaRamanaV"
           ><img src="assets/icons/icons8-github.svg" alt="Github" class="socicon"
         /></a>
         </div>
