build: updated projects

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
    <!-- scrolls -->
    <i class="scroll-up" id="scroll-up"
       ><img
-        src="assets/icons/icons8-upward-arrow.gif"
+        src="assets/icons/icons8-upward-arrow-64.png"
         class="socicon up-arrow"
         alt="scroll-up"
     /></i>
