--- a/projects.html
+++ b/projects.html
@@ -34,20 +34,20 @@
               loading="lazy"
               class="project-pic"
             />
-            <h3 class="project-title">Project1</h3>
+            <h3 class="project-title">Project3</h3>
             <small>June, 2022</small>
             <p>
-                <span class="badge badge-html">Html</span>
-                <span class="badge badge-css">css</span>
-                <span class="badge badge-js">Javascript</span>
+                <span class="badge badge-1">Html</span>
+                <span class="badge badge-1">css</span>
+                <span class="badge badge-1">Javascript</span>
               </p>
             <p class="project-details">
               Best way to learn programming is by building projects.
               Look at the projects that I have made so far. I have included both the Live demo and source code link. 
               Have look into it and review's are welcome.
             </p>
-            <a href="" class="project-link">Live Demo</a>
-            <a href="" class="project-link">View Source</a>
+            <a href="" class="primary-btn"> Demo</a>
+            <a href="" class="primary-btn">Source</a>
           </div>
   
           <div class="project-container project-card">
@@ -58,12 +58,19 @@
               class="project-pic"
             />
             <h3 class="project-title">Project2</h3>
+            <small>June, 2022</small>
+            <p>
+                <span class="badge badge-1">Html</span>
+                <span class="badge badge-1">css</span>
+                <span class="badge badge-1">Javascript</span>
+              </p>
             <p class="project-details">
               Best way to learn programming is by writing 
               I share learnings through my blogs which is helping to improve my understanding on the topic.
               Have a look into it and review's are welcome.
             </p>
-            <a href="blogs.html"  class="project-link">Read blogs</a>
+            <a href="" class="primary-btn"> Demo</a>
+            <a href="" class="primary-btn">Source</a>
           </div>
         </div>
 
@@ -76,12 +83,19 @@
                 class="project-pic"
               />
               <h3 class="project-title">Project1</h3>
+              <small>June, 2022</small>
+              <p>
+                  <span class="badge badge-1">Html</span>
+                  <span class="badge badge-1">css</span>
+                  <span class="badge badge-1">Javascript</span>
+                </p>
               <p class="project-details">
                 Best way to learn programming is by building projects.
                 Look at the projects that I have made so far. I have included both the Live demo and source code link. 
                 Have look into it and review's are welcome.
               </p>
-              <a href="projects.html" class="project-link">View projects</a>
+              <a href="" class="primary-btn"> Demo</a>
+            <a href="" class="primary-btn">Source</a>
             </div>
     
             <div class="project-container project-card">
@@ -92,12 +106,19 @@
                 class="project-pic"
               />
               <h3 class="project-title">Project2</h3>
+              <small>June, 2022</small>
+              <p>
+                  <span class="badge badge-1">Html</span>
+                  <span class="badge badge-1">css</span>
+                  <span class="badge badge-1">Javascript</span>
+                </p>
               <p class="project-details">
                 Best way to learn programming is by writing 
                 I share learnings through my blogs which is helping to improve my understanding on the topic.
                 Have a look into it and review's are welcome.
               </p>
-              <a href="blogs.html"  class="project-link">Read blogs</a>
+              <a href="" class="primary-btn"> Demo</a>
+            <a href="" class="primary-btn">Source</a>
             </div>
           </div>
 
@@ -135,7 +156,7 @@
      <!-- scrolls -->
      <i class="scroll-up" id="scroll-up"
         ><img
-          src="assets/icons/icons8-upward-arrow.gif"
+          src="assets/icons/icons8-upward-arrow-64.png"
           class="socicon up-arrow"
           alt="scroll-up"
       /></i>
