build: updated projects

--- a/projects.html
+++ b/projects.html
@@ -1,13 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lalitha | Projects</title>
-     <!--CSS Styles -->
-     <link rel="stylesheet" href="assets/css/styles.css" />
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!--CSS Styles -->
+    <link rel="stylesheet" href="assets/css/styles.css" />
+
+    <!-- Favicons -->
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="assets/icons/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="assets/icons/favicon-32x32.png" 
+    />
+
+    <!-- Animate CSS CDN -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+    <title>Projects | Lalitha</title>
+  </head>
 <body>
     <!-- Navbar -->
     <nav>
@@ -34,7 +54,7 @@
               loading="lazy"
               class="project-pic"
             />
-            <h3 class="project-title">Project3</h3>
+            <h3 class="project-title">UniStore</h3>
             <small>June, 2022</small>
             <p>
                 <span class="badge badge-1">Html</span>
@@ -132,27 +152,28 @@
             >Lalitha Vadavalli</a
           >
         </p>
+          <!-- Social accounts  -->
+          <div class="socials">
+            <a href="#"
+              ><img
+                src="assets/icons/icons8-twitter.svg"
+                alt="Twitter"
+                loading="lazy"
+                class="socicon"
+            /></a>
+            <a href="https://www.linkedin.com/in/lalithavadavalli/"
+              ><img
+                src="assets/icons/icons8-linkedin-circled.svg"
+                alt="Linkedin"
+                loading="lazy"
+                class="socicon"
+            /></a>
+            <a href="https://github.com/LalithaRamanaV"
+              ><img src="assets/icons/icons8-github.svg" alt="Github" class="socicon"
+            /></a>
+            </div>
       </footer>
-         <!-- Social accounts  -->
-         <div class="socials">
-          <a href="#"
-            ><img
-              src="assets/icons/icons8-twitter.svg"
-              alt="Twitter"
-              loading="lazy"
-              class="socicon"
-          /></a>
-          <a href="https://www.linkedin.com/in/lalithavadavalli/"
-            ><img
-              src="assets/icons/icons8-linkedin-circled.svg"
-              alt="Linkedin"
-              loading="lazy"
-              class="socicon"
-          /></a>
-          <a href="https://github.com/LalithaRamanaV"
-            ><img src="assets/icons/icons8-github.svg" alt="Github" class="socicon"
-          /></a>
-          </div>
+       
      <!-- scrolls -->
      <i class="scroll-up" id="scroll-up"
         ><img
