--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="assets/icons/apple-touch-icon.pn"
+      href="assets/icons/apple-touch-icon.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="assets/icons/favicon-32x32.pn" 
+      href="assets/icons/favicon-32x32.png" 
     />
 
     <!-- Animate CSS CDN -->
@@ -44,36 +44,25 @@
     </nav>
     <!-- Hero Section -->
     <section class="hero" id="about">
-      <img
-        src="assets/images/wfh_1.svg"
-        alt="lalitha"
-        loading="lazy"
-        class="hero-img"
-      />
-      <div class="bio animate__animated animate__shakeX">
-        <h2 class="bio-title">Hi there!</h2>
+      <div class="bio ">
+        <h1 class="bio-title">Hi there!</h1>
         <p class="bio-text">
-          I am Lalitha Vadavalli as aspiring developer.Firstly I have started from content writing and out of curiosity started learning development.So now i wanted to pursue my career in this field.
+          I'm <span class="bio-span">Lalitha Vadavalli</span> an aspiring developer.
         </p>
+        <p class="bio-text">
+          
+        </p>
+        <a href="" class="primary-btn"> Resume</a>
+        <a href="projects.html" class="primary-btn">Projects</a>
       </div>
     </section>
     <!-- More about -->
     <section class="more-about">
       <h2>More About Me</h2>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis
-        nesciunt excepturi quos obcaecati incidunt voluptatem ipsam sunt ipsum,
-        autem deleniti cupiditate molestias quis unde quae totam porro dicta
-        iure animi inventore, veniam hic! Omnis nulla, delectus a voluptatibus
+        Hi, I am a developer skilled in JavaScript and React. I have been working on MERN projects which helped me to enhance my skills with Next.js, ChakraUI, Node and MongoDB. I like to explore and learn new web technologies so I have made some projects using TypeScript, React, Node,Mongodb,Express,Redux and React Native. Apart from that I also worked as a Content Writer for a non.profit organisation.
       </p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur
-        nostrum dolor minus, libero delectus praesentium perferendis
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero,
-        consequuntur labore? Ea totam voluptas amet!
-      </p>
+     
     </section>
     <!-- Skills section -->
     <section class="skills" id="skills">
@@ -174,6 +163,7 @@
             class="project-pic"
           /> -->
           <h3 class="project-title">Projects</h3>
+          <hr/>
           <p class="project-details">
             Best way to learn programming is by building projects.
             Look at the projects that I have made so far. I have included both the Live demo and source code link. 
@@ -190,6 +180,7 @@
             class="project-pic"
           /> -->
           <h3 class="project-title">Blogs</h3>
+          <hr/>
           <p class="project-details">
             Best way to learn programming is by writing 
             I share learnings through my blogs which is helping to improve my understanding on the topic.
@@ -208,7 +199,6 @@
           >Lalitha Vadavalli</a
         >
       </p>
-    </footer>
        <!-- Social accounts  -->
        <div class="socials">
         <a href="#"
@@ -229,6 +219,7 @@
           ><img src="assets/icons/icons8-github.svg" alt="Github" class="socicon"
         /></a>
         </div>
+    </footer>
    <!-- scrolls -->
    <i class="scroll-up" id="scroll-up"
       ><img
