fix: project cards

--- a/projects.html
+++ b/projects.html
@@ -48,15 +48,20 @@
         
         <div class="projects-container">
           <div class="project-container project-card">
-            <img
+            <!-- <img
               src="assets/images/expenseTracker.png"
               alt="expense-tracker"
               loading="lazy"
               class="project-pic"
-            />
-            <h3 class="project-title">UniStore</h3>
+            /> -->
+            <h3 class="project-title">Unistore</h3>
             <small>June, 2022</small>
-            <p>
+              <p class="badges">
+                <span class="badge badge-1">Html</span>
+                <span class="badge badge-1">css</span>
+                <span class="badge badge-1">Javascript</span>
+              </p>
+              <p>
                 <span class="badge badge-1">Html</span>
                 <span class="badge badge-1">css</span>
                 <span class="badge badge-1">Javascript</span>
@@ -65,21 +70,29 @@
               Best way to learn programming is by building projects.
               Look at the projects that I have made so far. I have included both the Live demo and source code link. 
               Have look into it and review's are welcome.
+              Best way to learn programming is by writing 
+              I share learnings through my blogs which is helping to improve my understanding on the topic.
+              Have a look into it and review's are welcome.
             </p>
             <a href="" class="primary-btn"> Demo</a>
-            <a href="" class="primary-btn">Source</a>
+            <a href="" class="sec-btn">Source</a>
           </div>
   
           <div class="project-container project-card">
-            <img
+            <!-- <img
               src="assets/images/greenyEarth.png"
               alt="greeny-earth"
               loading="lazy"
               class="project-pic"
-            />
+            /> -->
             <h3 class="project-title">Project2</h3>
             <small>June, 2022</small>
-            <p>
+            <p class="badges">
+              <span class="badge badge-1">Html</span>
+              <span class="badge badge-1">css</span>
+              <span class="badge badge-1">Javascript</span>
+            </p>
+              <p>
                 <span class="badge badge-1">Html</span>
                 <span class="badge badge-1">css</span>
                 <span class="badge badge-1">Javascript</span>
@@ -88,23 +101,31 @@
               Best way to learn programming is by writing 
               I share learnings through my blogs which is helping to improve my understanding on the topic.
               Have a look into it and review's are welcome.
+              Best way to learn programming is by writing 
+              I share learnings through my blogs which is helping to improve my understanding on the topic.
+              Have a look into it and review's are welcome.
             </p>
             <a href="" class="primary-btn"> Demo</a>
-            <a href="" class="primary-btn">Source</a>
+            <a href="" class="sec-btn">Source</a>
           </div>
         </div>
 
         <div class="projects-container">
             <div class="project-container project-card">
-              <img
+              <!-- <img
                 src="assets/images/expenseTracker.png"
                 alt="expense-tracker"
                 loading="lazy"
                 class="project-pic"
-              />
+              /> -->
               <h3 class="project-title">Project1</h3>
               <small>June, 2022</small>
-              <p>
+              <p class="badges">
+                <span class="badge badge-1">Html</span>
+                <span class="badge badge-1">css</span>
+                <span class="badge badge-1">Javascript</span>
+              </p>
+                <p>
                   <span class="badge badge-1">Html</span>
                   <span class="badge badge-1">css</span>
                   <span class="badge badge-1">Javascript</span>
@@ -113,21 +134,29 @@
                 Best way to learn programming is by building projects.
                 Look at the projects that I have made so far. I have included both the Live demo and source code link. 
                 Have look into it and review's are welcome.
+                Best way to learn programming is by writing 
+                I share learnings through my blogs which is helping to improve my understanding on the topic.
+                Have a look into it and review's are welcome.
               </p>
               <a href="" class="primary-btn"> Demo</a>
-            <a href="" class="primary-btn">Source</a>
+            <a href="" class="sec-btn">Source</a>
             </div>
     
             <div class="project-container project-card">
-              <img
+              <!-- <img
                 src="assets/images/greenyEarth.png"
                 alt="greeny-earth"
                 loading="lazy"
                 class="project-pic"
-              />
+              /> -->
               <h3 class="project-title">Project2</h3>
               <small>June, 2022</small>
-              <p>
+              <p class="badges">
+                <span class="badge badge-1">Html</span>
+                <span class="badge badge-1">css</span>
+                <span class="badge badge-1">Javascript</span>
+              </p>
+                <p>
                   <span class="badge badge-1">Html</span>
                   <span class="badge badge-1">css</span>
                   <span class="badge badge-1">Javascript</span>
@@ -136,9 +165,12 @@
                 Best way to learn programming is by writing 
                 I share learnings through my blogs which is helping to improve my understanding on the topic.
                 Have a look into it and review's are welcome.
+                Best way to learn programming is by writing 
+                I share learnings through my blogs which is helping to improve my understanding on the topic.
+                Have a look into it and review's are welcome.
               </p>
               <a href="" class="primary-btn"> Demo</a>
-            <a href="" class="primary-btn">Source</a>
+            <a href="" class="sec-btn">Source</a>
             </div>
           </div>
 
