--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           
         </p>
         <a href="" class="primary-btn"> Resume</a>
-        <a href="projects.html" class="primary-btn">Projects</a>
+        <a href="projects.html" class="sec-btn">Projects</a>
       </div>
     </section>
     <!-- More about -->
