style: styled cards

--- a/projects.html
+++ b/projects.html
@@ -28,9 +28,9 @@
     />
     <title>Projects | Lalitha</title>
   </head>
-<body>
+   <body>
     <!-- Navbar -->
-    <nav>
+      <nav>
         <h1>Lalitha</h1>
         <ul class="navigation">
             <li><a href="index.html" >Home</a></li>
@@ -38,24 +38,16 @@
             <li><a href="blogs.html" class="nav-link">Blogs</a></li>
         </ul>
         <button class="burger-menu" id="burger-menu">
-          <ion-icon class="bars" name="menu-outline"></ion-icon>
+        <ion-icon class="bars" name="menu-outline"></ion-icon>
         </button>
       </nav>
-    <!-- Projects section -->
-    <section class="projects" id="projects">
-        <h2 class="projects-title">Take a look into my projects
-        </h2>
-        
+      <!-- Projects section -->
+      <section class="projects" id="projects">
+      <h2 class="projects-title">Take a look into my projects</h2>
         <div class="projects-container">
           <div class="project-container project-card">
-            <!-- <img
-              src="assets/images/expenseTracker.png"
-              alt="expense-tracker"
-              loading="lazy"
-              class="project-pic"
-            /> -->
-            <h3 class="project-title">Unistore</h3>
-            <small>June, 2022</small>
+             <h3 class="project-title">Unistore</h3>
+             <small>June, 2022</small>
               <p class="badges">
                 <span class="badge badge-1">Html</span>
                 <span class="badge badge-1">css</span>
@@ -66,25 +58,14 @@
                 <span class="badge badge-1">css</span>
                 <span class="badge badge-1">Javascript</span>
               </p>
-            <p class="project-details">
-              Best way to learn programming is by building projects.
-              Look at the projects that I have made so far. I have included both the Live demo and source code link. 
-              Have look into it and review's are welcome.
-              Best way to learn programming is by writing 
-              I share learnings through my blogs which is helping to improve my understanding on the topic.
-              Have a look into it and review's are welcome.
-            </p>
-            <a href="" class="primary-btn"> Demo</a>
-            <a href="" class="sec-btn">Source</a>
+              <p class="project-details">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit.Quidem molestiae ea necessitatibus ut aperiam, velit pariatur quos esse quasi qui natus illum dignissimos deleniti numquam voluptatem sequi earum modi voluptatum.
+              </p>
+             <a href="" class="primary-btn"> Demo</a>
+             <a href="" class="sec-btn">Source</a>
           </div>
   
           <div class="project-container project-card">
-            <!-- <img
-              src="assets/images/greenyEarth.png"
-              alt="greeny-earth"
-              loading="lazy"
-              class="project-pic"
-            /> -->
             <h3 class="project-title">Project2</h3>
             <small>June, 2022</small>
             <p class="badges">
@@ -92,11 +73,11 @@
               <span class="badge badge-1">css</span>
               <span class="badge badge-1">Javascript</span>
             </p>
-              <p>
+            <p>
                 <span class="badge badge-1">Html</span>
                 <span class="badge badge-1">css</span>
                 <span class="badge badge-1">Javascript</span>
-              </p>
+            </p>
             <p class="project-details">
               Best way to learn programming is by writing 
               I share learnings through my blogs which is helping to improve my understanding on the topic.
@@ -112,12 +93,6 @@
 
         <div class="projects-container">
             <div class="project-container project-card">
-              <!-- <img
-                src="assets/images/expenseTracker.png"
-                alt="expense-tracker"
-                loading="lazy"
-                class="project-pic"
-              /> -->
               <h3 class="project-title">Project1</h3>
               <small>June, 2022</small>
               <p class="badges">
@@ -125,11 +100,11 @@
                 <span class="badge badge-1">css</span>
                 <span class="badge badge-1">Javascript</span>
               </p>
-                <p>
+              <p>
                   <span class="badge badge-1">Html</span>
                   <span class="badge badge-1">css</span>
                   <span class="badge badge-1">Javascript</span>
-                </p>
+              </p>
               <p class="project-details">
                 Best way to learn programming is by building projects.
                 Look at the projects that I have made so far. I have included both the Live demo and source code link. 
@@ -139,7 +114,7 @@
                 Have a look into it and review's are welcome.
               </p>
               <a href="" class="primary-btn"> Demo</a>
-            <a href="" class="sec-btn">Source</a>
+              <a href="" class="sec-btn">Source</a>
             </div>
     
             <div class="project-container project-card">
@@ -170,7 +145,7 @@
                 Have a look into it and review's are welcome.
               </p>
               <a href="" class="primary-btn"> Demo</a>
-            <a href="" class="sec-btn">Source</a>
+              <a href="" class="sec-btn">Source</a>
             </div>
           </div>
 
