build: update projects

--- a/projects.html
+++ b/projects.html
@@ -59,7 +59,12 @@
                 <span class="badge badge-1">Javascript</span>
               </p>
               <p class="project-details">
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit.Quidem molestiae ea necessitatibus ut aperiam, velit pariatur quos esse quasi qui natus illum dignissimos deleniti numquam voluptatem sequi earum modi voluptatum.
+                Best way to learn programming is by building projects.
+                Look at the projects that I have made so far. I have included both the Live demo and source code link. 
+                Have look into it and review's are welcome.
+                Best way to learn programming is by writing 
+                I share learnings through my blogs which is helping to improve my understanding on the topic.
+                Have a look into it and review's are welcome.
               </p>
              <a href="" class="primary-btn"> Demo</a>
              <a href="" class="sec-btn">Source</a>
@@ -79,9 +84,9 @@
                 <span class="badge badge-1">Javascript</span>
             </p>
             <p class="project-details">
-              Best way to learn programming is by writing 
-              I share learnings through my blogs which is helping to improve my understanding on the topic.
-              Have a look into it and review's are welcome.
+              Best way to learn programming is by building projects.
+              Look at the projects that I have made so far. I have included both the Live demo and source code link. 
+              Have look into it and review's are welcome.
               Best way to learn programming is by writing 
               I share learnings through my blogs which is helping to improve my understanding on the topic.
               Have a look into it and review's are welcome.
