build: updated projects

--- a/projects.html
+++ b/projects.html
@@ -60,12 +60,7 @@
                 <span class="badge badge-1">Javascript</span>
               </p>
               <p class="project-details">
-                Best way to learn programming is by building projects.
-                Look at the projects that I have made so far. I have included both the Live demo and source code link. 
-                Have look into it and review's are welcome.
-                Best way to learn programming is by writing 
-                I share learnings through my blogs which is helping to improve my understanding on the topic.
-                Have a look into it and review's are welcome.
+                An Ecommerce application created using Next.js and Tailwind css.Used authentication and payment integration
               </p>
              <a href="" class="primary-btn"> Demo</a>
              <a href="" class="sec-btn">Source</a>
@@ -146,6 +141,7 @@
                   <span class="badge badge-1">Javascript</span>
                 </p>
               <p class="project-details">
+                
                 Best way to learn programming is by writing 
                 I share learnings through my blogs which is helping to improve my understanding on the topic.
                 Have a look into it and review's are welcome.
