--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <body>
     <!-- Navbar -->
     <nav>
-      <h1>Lalitha</h1>
+      <h1><a href="#about">Lalitha</a></h1>
       <ul class="navigation">
         <li><a href="#about" class="active">Home</a></li>
         <li><a href="projects.html" >Projects</a></li>
@@ -164,9 +164,9 @@
           <h3 class="project-title">Projects</h3>
           <hr/>
           <p class="project-details">
-            Best way to learn programming is by building projects.
-            Look at the projects that I have made so far. I have included both the Live demo and source code link. 
-            Have look into it and review's are welcome.
+            Best way to learn programming is by writing 
+            I share learnings through my blogs which is helping to improve my understanding on the topic.
+            Have a look into it and review's are welcome.
           </p>
           <a href="projects.html" class="project-link">View projects</a>
         </div>
@@ -181,9 +181,9 @@
           <h3 class="project-title">Blogs</h3>
           <hr/>
           <p class="project-details">
-            Best way to learn programming is by writing 
-            I share learnings through my blogs which is helping to improve my understanding on the topic.
-            Have a look into it and review's are welcome.
+            Best way to learn is by writing.I share learnings 
+            through my blogs which helps to improve my 
+            understanding. Have a look into it.
           </p>
           <a href="blogs.html"  class="project-link">Read blogs</a>
         </div>
@@ -193,9 +193,9 @@
     <footer>
       <p class="copy">&copy; Copyright 2022</p>
       <p class="copy">
-        Designed and developed by
+       developed by
         <a href="https://twitter.com/"
-          >Lalitha Vadavalli</a
+          >Lalitha</a
         >
       </p>
        <!-- Social accounts  -->
