--- a/projects.html
+++ b/projects.html
@@ -31,7 +31,7 @@
    <body>
     <!-- Navbar -->
       <nav>
-        <h1>Lalitha</h1>
+        <h1><a href="index.html">Lalitha</a></h1>
         <ul class="navigation">
             <li><a href="index.html" >Home</a></li>
             <li><a href="projects.html" class="active">Projects</a></li>
@@ -60,7 +60,12 @@
                 <span class="badge badge-1">Javascript</span>
               </p>
               <p class="project-details">
-                An Ecommerce application created using Next.js and Tailwind css.Used authentication and payment integration
+                Best way to learn programming is by building projects.
+              Look at the projects that I have made so far. I have included both the Live demo and source code link. 
+              Have look into it and review's are welcome.
+              Best way to learn programming is by writing 
+              I share learnings through my blogs which is helping to improve my understanding on the topic.
+              Have a look into it and review's are welcome.
               </p>
              <a href="" class="primary-btn"> Demo</a>
              <a href="" class="sec-btn">Source</a>
@@ -159,9 +164,9 @@
       <footer>
         <p class="copy">&copy; Copyright 2022</p>
         <p class="copy">
-          Designed and developed by
+          developed by
           <a href="https://twitter.com/"
-            >Lalitha Vadavalli</a
+            >Lalitha</a
           >
         </p>
           <!-- Social accounts  -->
