build: updated projects section

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <section class="more-about">
       <h2>More About Me</h2>
       <p>
-        Hi, I am a developer skilled in JavaScript and React. I have been working on MERN projects which helped me to enhance my skills with Next.js, ChakraUI, Node and MongoDB. I like to explore and learn new web technologies so I have made some projects using TypeScript, React, Node,Mongodb,Express,Redux and React Native. Apart from that I also worked as a Content Writer for a non.profit organisation.
+        A passionate Full Stack Software Developer 🚀 having a special interest in Frontend technologies and experience of building Web applications with JavaScript / Reactjs / Nodejs and some other cool libraries and frameworks.
       </p>
      
     </section>
@@ -73,12 +73,6 @@
             alt=""
             loading="lazy"
             class="icon icon-card"
-          />
-          <img 
-          src="assets/icons/icons8-redux.svg"
-          alt=""
-          loading="lazy"
-          class="icon icon-card"
           />
           <img
             src="assets/icons/icons8-css3.svg"
@@ -102,12 +96,6 @@
             class="icon icon-card"
           />
           <img
-            src="assets/icons/icons8-react-native.svg"
-            alt=""
-            loading="lazy"
-            class="icon icon-card"
-          />
-          <img
             src="assets/icons/icons8-git.svg"
             alt=""
             loading="lazy"
@@ -123,6 +111,12 @@
 
         <div class="first-set animate__animated animate__pulse">
           <img
+          src="assets/icons/icons8-react-native.svg"
+          alt=""
+          loading="lazy"
+          class="icon icon-card"
+        />
+          <img
             src="assets/icons/icons8-mongodb.svg"
             alt=""
             loading="lazy"
@@ -134,19 +128,29 @@
           loading="lazy"
           class="icon icon-card"
           />
+        </div>
+<!-- 
+        <div class="first-set animate__animated animate__pulse">
+          <img 
+          src="assets/icons/icons8-redux.svg"
+          alt=""
+          loading="lazy"
+          class="icon icon-card"
+          />
           <img
             src="assets/icons/icons8-json-web-token.svg"
             alt=""
             loading="lazy"
             class="icon icon-card"
           />
-          <img
+           <img
             src="assets/icons/icons8-github.svg"
             alt=""
             loading="lazy"
             class="icon icon-card"
           />
-        </div>
+        </div> -->
+
       </div>
     </section>
     <!-- Projects section -->
@@ -164,9 +168,7 @@
           <h3 class="project-title">Projects</h3>
           <hr/>
           <p class="project-details">
-            Best way to learn programming is by writing 
-            I share learnings through my blogs which is helping to improve my understanding on the topic.
-            Have a look into it and review's are welcome.
+            I would like to showcase my work and thus, you can see my projects hosted online
           </p>
           <a href="projects.html" class="project-link">View projects</a>
         </div>
@@ -181,9 +183,7 @@
           <h3 class="project-title">Blogs</h3>
           <hr/>
           <p class="project-details">
-            Best way to learn is by writing.I share learnings 
-            through my blogs which helps to improve my 
-            understanding. Have a look into it.
+            I would like to document my journey of learning.Here are my blogs you can read
           </p>
           <a href="blogs.html"  class="project-link">Read blogs</a>
         </div>
