--- a/projects.html
+++ b/projects.html
@@ -47,13 +47,12 @@
 
         <div class="projects-container">
           <div class="project-container project-card">
-             <h3 class="project-title">Unistore</h3>
+             <h3 class="project-title">How well do you know me?</h3>
              <hr/>
              <small>June, 2022</small>
               <p class="badges">
-                <span class="badge badge-1">Html</span>
-                <span class="badge badge-1">css</span>
-                <span class="badge badge-1">Javascript</span>
+                <span class="badge badge-1">Node js</span>
+                <span class="badge badge-1">Chalk</span>
               </p>
              
               <p class="project-details">
@@ -69,13 +68,12 @@
           </div>
   
           <div class="project-container project-card">
-            <h3 class="project-title">Project2</h3>
+            <h3 class="project-title">Country and Capital</h3>
             <hr/>
             <small>June, 2022</small>
             <p class="badges">
-              <span class="badge badge-1">Html</span>
-              <span class="badge badge-1">css</span>
-              <span class="badge badge-1">Javascript</span>
+              <span class="badge badge-1">Node js</span>
+              <span class="badge badge-1">Chalk</span>
             </p>
             <p class="project-details">
               Best way to learn programming is by building projects.
@@ -138,9 +136,15 @@
 
         <div class="projects-container">
           <div class="project-container project-card">
+            <img
+            src="assets/images/bananatalk.png"
+            alt="expense-tracker"
+            loading="lazy"
+            class="project-pic"
+          />
              <h3 class="project-title">Unistore</h3>
-             <hr/>
-             <small>June, 2022</small>
+            <!-- <hr>
+             <small>June, 2022</small> -->
               <p class="badges">
                 <span class="badge badge-1">Html</span>
                 <span class="badge badge-1">css</span>
